# serde_vs_rkyv

./: Cargo.toml
src/: cow_bytes.rs  main: 5224382.md  main_example_from_rkyvsite.rs  main_mp_of_cowbytes.rs  main_mp_of_ints.rs  main_mp_of_strs.rs  main_vt_of_cowbytes.rs  main_vt_of_ints.rs  main_vt_of_strs.rs  size.rs  storage_preference.rs  with_Arc_cow_bytes.rs
