[package]
name = "serde_vs_rkyv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.0"
parking_lot = "0.11"
stable_deref_trait = "1.1"
rkyv = { version = "0.7.42", features = ["validation"] }

speedy = "0.7"
